--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Easy Reserve</title>
+    <script
+      src="https://api-maps.yandex.ru/2.1/?apikey=ee11ac76-8900-40f8-8654-ebdd5c98919e&lang=ru_RU"
+      type="text/javascript"
+    ></script>
   </head>
   <body>
     <div id="root"></div>
